--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Notifier\\": "src"
+            "LightStrap\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Notifier\\Test\\": "tests",
+            "LightStrap\\Test\\": "tests",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
     }
