--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "cakephp-plugin",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "3.1.*",
+        "cakephp/cakephp": "~3.1",
         "holt59/cakephp3-bootstrap-helpers": "dev-master"
     },
     "require-dev": {
